--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
-TELE_TOKEN=7246298410:AAGe8o_goWNQ2y8SuPdWAeZZLFkkFzMCxPQ
-GROUP_ID=-4271566609
+TELE_TOKEN=6526157464:AAHsldNHQGjDoTa7MFs73NFDb2yyx2zzDDc
+GROUP_ID=-985288381
 GROUP_MUSCAT=-1002034070839
+PYTHON_VERSION=3.10.8
+BASE_URL="https://teddybe.onrender.com/users/"
+API_ID=25926510
+API_HASH=759cc790bb211cab32bdb9ce39325e3f
+PHONE="+6591990361"
+USER_ID=778950038
+BOT_ID=7246298410
